[tool.poetry]
name = "mfbeep"
version = "0.1.0"
description = ""
authors = ["timofey basuev <echiauta@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mfbeep = "mfbeep.main:app"

[tool.poetry.dependencies]
python = "^3.12"
anyplayer = "0.0.6"
click = "8.1.7"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
pip = "24.1.2"
pygments = "2.18.0"
rich = "13.7.1"
shellingham = "1.5.4"
typing-extensions = "4.12.2"
wheel = "0.43.0"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
